--- a/输入字节流.md
+++ b/输入字节流.md
@@ -107,7 +107,7 @@ public static void readTest() throws IOException{
 	byte[] buf=new byte[3];//三个字节的数据
 	int  length      =file2.read(buf);//数据已经读取到byte数组中了，读一次就装三个数据。返回的是多少个字节数据到字节数组中了。
 	//使用字节数组构建字符串
-	String content= new String(buf,0,length);//指定多少个数据进行读取，String会进行解码
+	String content= new String(buf,0,length);//指定多少个数据进行读取，String会进行解码，默认是unicode。
 	System.out.println(content);
 	//关闭资源
 	file2.close();
