--- a/输入输出流的异常问题.md
+++ b/输入输出流的异常问题.md
@@ -63,3 +63,86 @@ public static void read(){
 }
 
 }
+
+```
+## 这是一个完整的处理异常的方法
+```ruby
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class demo1 {
+
+	public static void main(String[] args) {
+	
+		
+		
+   //复制文件
+		copy();
+		
+		
+		
+
+	}
+	
+	
+	public static void copy() {
+		
+		FileInputStream inputFile=null;
+		FileOutputStream outfile=null;
+		try{
+			File file=new File("D:\\abc.txt");
+			File file1=new File("D:\\a.txt");
+		
+		inputFile=new FileInputStream(file);
+		 outfile=new FileOutputStream(file1);
+		
+		byte [] buf=new byte[1024];
+		int length=0;
+		while((length=inputFile.read(buf))!=-1){
+			
+			outfile.write(buf,0,length);
+			
+		}
+		}catch(IOException e){
+			System.out.println("拷贝出现问题");
+			throw new RuntimeException(e);
+			
+		}finally{
+			try{
+				if(inputFile!=null){
+			
+			inputFile.close();
+			System.out.println("关闭对象流成功");
+				}
+				
+			}
+			catch(IOException e){
+				System.out.println("关闭输入流资源失败");
+				throw new RuntimeException(e);
+				
+			}finally{
+				
+				try{
+					if(outfile!=null){
+				
+				outfile.close();
+				System.out.println("关闭输出流成功");
+					}
+					
+				}
+				catch(IOException e){
+					System.out.println("关闭输出流资源失败");
+					throw new RuntimeException(e);
+			
+				}
+			}
+		}
+		
+		
+		
+	}
+
+}
